--- a/main.ipynb
+++ b/main.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://github.com/tatarenstas/House-price-predict\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://github.com/tatarenstas/House-price-predict\" target=\"_parent\"><img src=\"https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png\" alt=\"Open In GitHub\"/></a>"
       ]
     },
     {
